# swagger/definitions/swagger.yml
@@ -46,7 +46,7 @@ paths:
       parameters:
         - name: id
           in: path
-          description: User id
+          description: Company id
           required: true
           schema:
             type: integer
@@ -65,7 +65,42 @@ paths:
               schema:
                 $ref: "#components/responses/Forbidden"
         '404':
-          description: User not found.
+          description: Company not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/responses/NotFound"
+  /companies/{id}/users:
+    get:
+      tags:
+        - Companies
+      summary: Get Company users
+      description: Get Company users
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: Company id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Company Users
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/Company"
+        '403':
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/responses/Forbidden"
+        '404':
+          description: Company not found.
           content:
             application/json:
               schema:
